specs/blueprints/errors/validation/missing_field_value.eno
# Querying a field for a required but missing value 

-- input
field:
-- input

-- javascript
parse(input).field('field').requiredStringValue();
-- javascript

-- php
Enolib\Parser::parse($input)->field('field')->requiredStringValue();
-- php

-- python
enolib.parse(input).field('field').required_string_value()
-- python

-- ruby
Enolib.parse(input).field('field').required_string_value
-- ruby

## ValidationError

-- text
The field 'field' must contain a value.
-- text

-- snippet
   Line | Content
 >    1 | field:
-- snippet

selection: [0,6] => [0,6]
